--- a/less/variables.less
+++ b/less/variables.less
@@ -130,8 +130,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "/assets/images/bootstrap/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "/assets/images/bootstrap/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
@@ -249,9 +249,9 @@
 
 // Default 940px grid
 // -------------------------
-@gridColumns:             12;
-@gridColumnWidth:         60px;
-@gridGutterWidth:         20px;
+@gridColumns:             48;
+@gridColumnWidth:         20px;
+@gridGutterWidth:         0px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 // 1200px min
