Added a welcome alert.

--- a/less/alerts.less
+++ b/less/alerts.less
@@ -47,6 +47,11 @@
   border-color: @infoBorder;
   color: @infoText;
 }
+.alert-welcome {
+  background-color: @welcomeBackground;
+  border-color: @welcomeBorder;
+  color: @welcomeText;
+}
 
 
 // Block alerts
