--- a/less/variables.less
+++ b/less/variables.less
@@ -224,6 +224,10 @@
 @infoBackground:          #d9edf7;
 @infoBorder:              darken(spin(@infoBackground, -10), 7%);
 
+@welcomeText:             @grayDark;
+@welcomeBackground:       #f6f1d7;
+@welcomeBorder:           darken(spin(@welcomeBackground, -10), 7%);
+
 
 // Tooltips and popovers
 // -------------------------
